# usb2n64-adapter

./: CMakeLists.txt  README.md  hid_app.c  hid_app.h  hid_parser.c  hid_parser.h  main.c  my_wait_us_asm.S  n64.pio  n64send.pio  tusb_config.h
case/: USB2N64 case bottom v1.stl  USB2N64 case top v1.stl
pico-sdk/lib/tinyusb/hw/bsp/rp2040/: family.cmake
pico-sdk/lib/tinyusb/src/: tusb.h  tusb_option.h
pico-sdk/lib/tinyusb/src/class/hid/: hid_host.c
pico-sdk/lib/tinyusb/src/class/xpad/: xpad_host.h
pico-sdk/lib/tinyusb/src/host/: usbh.c
pico-sdk/lib/tinyusb/src/portable/raspberrypi/rp2040/: hcd_rp2040.c
tinyusb-patch/: xpad.patch
tinyusb-patch/src/class/xpad/: xpad_host.c  xpad_host.h
